applications-charts/templates/argocd/argo-cd.yaml
---
# Source: argo-cd/templates/argocd-application-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-application-controller
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
spec:
  ports:
  - name: https-controller
    port: 8082
    targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-repo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
  name: argo-cd-argocd-repo-server
spec:
  ports:
  - name: https-repo-server
    protocol: TCP
    port: 8081
    targetPort: repo-server
  selector:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-server
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: server
  - name: https
    protocol: TCP
    port: 443
    targetPort: server
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-dex-server
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
spec:
  ports:
  - name: http
    protocol: TCP
    port: 5556
    targetPort: http
  - name: grpc
    protocol: TCP
    port: 5557
    targetPort: grpc
  selector:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-redis
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
spec:
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
---
# Source: argo-cd/templates/argocd-application-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-application-controller
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v2.2.5"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
      app.kubernetes.io/instance: argo-cd
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-3.35.2
        app.kubernetes.io/name: argocd-application-controller
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: application-controller
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: "v2.2.5"
    spec:
      containers:
      - command:
        - argocd-application-controller
        - --status-processors
        - "20"
        - --operation-processors
        - "10"
        - --app-resync
        - "180"
        - --self-heal-timeout-seconds
        - "5"
        - --repo-server
        - argo-cd-argocd-repo-server:8081
        - --repo-server-timeout-seconds
        - "60"
        - --logformat
        - text
        - --loglevel
        - info
        - --redis
        - argo-cd-argocd-redis:6379
        image: quay.io/argoproj/argocd:v2.2.5
        imagePullPolicy: IfNotPresent
        name: application-controller
        ports:
        - name: controller
          containerPort: 8082
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        workingDir: /home/argocd
        volumeMounts:
        - name: argocd-home
          mountPath: /home/argocd
        - mountPath: /app/config/controller/tls
          name: argocd-repo-server-tls
        resources:
          {}
      serviceAccountName: argocd-application-controller
      volumes:
      - emptyDir: {}
        name: argocd-home
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
---
# Source: argo-cd/templates/argocd-repo-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-repo-server
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v2.2.5"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
      app.kubernetes.io/instance: argo-cd
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-3.35.2
        app.kubernetes.io/name: argocd-repo-server
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: repo-server
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: "v2.2.5"
    spec:
      containers:
      - name: repo-server
        image: quay.io/argoproj/argocd:v2.2.5
        imagePullPolicy: IfNotPresent
        command:
        - entrypoint.sh
        args:
        - argocd-repo-server
        - --redis
        - argo-cd-argocd-redis:6379
        - --logformat
        - text
        - --loglevel
        - info
        volumeMounts:
        - mountPath: /app/config/gpg/source
          name: gpg-keys
        - mountPath: /app/config/gpg/keys
          name: gpg-keyring
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/reposerver/tls
          name: argocd-repo-server-tls
        - mountPath: /tmp
          name: tmp-dir
        - mountPath: /helm-working-dir
          name: helm-working-dir
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
        ports:
        - name: repo-server
          containerPort: 8081
          protocol: TCP
        
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          {}
      serviceAccountName: default
      volumes:
      - name: gpg-keys
        configMap:
          name: argocd-gpg-keys-cm
      - emptyDir: {}
        name: gpg-keyring
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - name: helm-working-dir
        emptyDir: {}
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - emptyDir: {}
        name: tmp-dir
      - emptyDir: {}
        name: var-files
      - emptyDir: {}
        name: plugins
---
# Source: argo-cd/templates/argocd-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-server
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v2.2.5"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argo-cd
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-3.35.2
        app.kubernetes.io/name: argocd-server
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: server
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: "v2.2.5"
    spec:
      containers:
      - name: server
        image: quay.io/argoproj/argocd:v2.2.5
        imagePullPolicy: IfNotPresent
        command:
        - argocd-server
        
        - --staticassets
        - /shared/app
        
        - --repo-server
        - argo-cd-argocd-repo-server:8081
        - --dex-server
        - http://argo-cd-argocd-dex-server:5556
        - --logformat
        - text
        - --loglevel
        - info
        - --redis
        - argo-cd-argocd-redis:6379
        - --insecure
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/server/tls
          name: argocd-repo-server-tls
        - mountPath: /home/argocd
          name: plugins-home
        - mountPath: /tmp
          name: tmp-dir
        ports:
        - name: server
          containerPort: 8080
          protocol: TCP
        
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          {}
      serviceAccountName: argocd-server
      volumes:
      - emptyDir: {}
        name: static-files
      - emptyDir: {}
        name: tmp-dir
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - emptyDir: {}
        name: plugins-home
---
# Source: argo-cd/templates/dex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-dex-server
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v2.30.0"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
      app.kubernetes.io/instance: argo-cd
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-3.35.2
        app.kubernetes.io/name: argocd-dex-server
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: dex-server
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: "v2.30.0"
    spec:
      containers:
      - name: dex-server
        image: ghcr.io/dexidp/dex:v2.30.0
        imagePullPolicy: IfNotPresent
        command:
        - /shared/argocd-dex
        - rundex
        ports:
        - name: http
          containerPort: 5556
          protocol: TCP
        - name: grpc
          containerPort: 5557
          protocol: TCP
        - name: metrics
          containerPort: 5558
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp
          name: tmp-dir
        - mountPath: /shared
          name: static-files
        resources:
          {}
      serviceAccountName: argocd-dex-server
      volumes:
      - emptyDir: {}
        name: tmp-dir
      - emptyDir: {}
        name: static-files
---
# Source: argo-cd/templates/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-cd-argocd-redis
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "6.2.6-alpine"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-3.35.2
        app.kubernetes.io/name: argocd-redis
        app.kubernetes.io/instance: argo-cd
        app.kubernetes.io/component: redis
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: "6.2.6-alpine"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: default
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
      containers:
      - name: argo-cd-argocd-redis
        args:
        - --save
        - ""
        - --appendonly
        - "no"
        image: redis:6.2.6-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: redis
        resources:
          {}
---
# Source: argo-cd/templates/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-argocd-server
  labels:
    helm.sh/chart: argo-cd-3.35.2
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argo-cd.amitk.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
